--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "scripts": {
         "build": "tsc",
-        "start": "ts-node src/index.ts",
+        "start": "tsx src/index.ts",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write \"src/**/*.ts\""
@@ -27,7 +27,7 @@
         "husky": "^9.1.6",
         "lint-staged": "^15.2.10",
         "prettier": "^3.3.3",
-        "ts-node": "^10.9.2",
+        "tsx": "^4.19.1",
         "typescript": "^5.6.2",
         "typescript-eslint": "^8.5.0"
     },
