--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.10.0",
+        "@types/express": "^4.17.21",
         "@types/node": "^22.5.4",
         "@typescript-eslint/eslint-plugin": "^8.5.0",
         "@typescript-eslint/parser": "^8.5.0",
@@ -36,6 +37,9 @@
         "@adminjs/mongoose": "^4.1.0",
         "adminjs": "^7.8.12",
         "express": "^4.21.0",
-        "mongoose": "^8.6.2"
+        "express-formidable": "^1.2.0",
+        "express-session": "^1.18.0",
+        "mongoose": "^8.6.2",
+        "tslib": "^2.7.0"
     }
 }
