--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./public"
+    "outDir": "./public",
+    "allowImportingTsExtensions": true
   },
   "include": ["api"],
   "exclude": ["node_modules"]
