--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "outDir": "./public",
+    "outDir": "public",
     "allowImportingTsExtensions": true,
     "noEmit": true
   },
