--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
-  "compilerOptions": {
-    "target": "es2023",
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
-    "strict": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "public",
-    "allowImportingTsExtensions": true,
-    "noEmit": true
-  },
-  "include": ["api"],
-  "exclude": ["node_modules"]
+    "compilerOptions": {
+        "target": "es2023",
+        "module": "nodenext",
+        "moduleResolution": "nodenext",
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./public",
+        "noEmit": false,
+        "incremental": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": ["*", "api/*"]
+        }
+    },
+    "include": ["api"],
+    "exclude": ["node_modules", "public"]
 }
-
