--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "type": "module",
     "main": "api/index.ts",
     "scripts": {
-        "build": "tsc -b",
+        "build": "tsc",
         "start": "tsx watch api/index.ts",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
