--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
     "compilerOptions": {
-        "target": "es2023",
+        "target": "esnext",
         "module": "nodenext",
         "moduleResolution": "nodenext",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true,
         "outDir": "./public",
-        "noEmit": false,
-        "incremental": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "rootDir": "api",
         "baseUrl": ".",
         "paths": {
             "*": ["*", "api/*"]
         }
     },
-    "include": ["api"],
+    "include": ["api/**/*"],
     "exclude": ["node_modules", "public"]
 }
