--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@adminjs/mongoose": "^4.1.0",
         "adminjs": "^7.8.12",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
         "express": "^4.21.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.18.0",
