--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,1 @@
-{
-  "builds": [
-    { "src": "/public/index.ts", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/public/index.ts" }
-  ]
-}
-
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
