--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "@types/express": "^4.17.21",
         "@types/express-session": "^1.18.0",
         "@types/node": "^22.5.4",
+        "@types/react-big-calendar": "^1.8.11",
         "@typescript-eslint/eslint-plugin": "^8.5.0",
         "@typescript-eslint/parser": "^8.5.0",
         "@vercel/node": "^3.2.14",
@@ -52,8 +53,10 @@
         "express": "^4.21.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.18.0",
+        "moment": "^2.30.1",
         "mongoose": "^8.6.2",
         "pre-commit": "^1.2.2",
+        "react-big-calendar": "^1.14.0",
         "rimraf": "^6.0.1",
         "tslib": "^2.7.0"
     }
