--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "dependencies": {
         "@adminjs/express": "^6.1.0",
         "@adminjs/mongoose": "^4.1.0",
+        "@adminjs/upload": "^4.0.2",
+        "@google-cloud/storage": "^7.12.1",
         "adminjs": "^7.8.12",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
