--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@adminjs/mongoose": "^4.1.0",
         "@adminjs/upload": "^4.0.2",
         "@google-cloud/storage": "^7.12.1",
+        "@tinymce/tinymce-react": "^5.1.1",
         "adminjs": "^7.8.12",
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
