--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "type": "module",
     "main": "api/index.ts",
     "scripts": {
-        "start": "tsx watch api/index.ts",
+        "start": "node dist/index.js",
+        "dev": "npm run build && npm start",
         "lint": "eslint .",
         "lint:fix": "eslint . --fix",
         "format": "prettier --write \"src/**/*.ts\"",
-        "build": "rimraf dist && tsc",
+        "build": "rimraf dist && rollup -c rollup.config.js",
         "ts.check": "tsc --project tsconfig.json",
         "add-build": "git add dist"
     },
@@ -25,9 +26,12 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.10.0",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-typescript": "^12.1.1",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/express-session": "^1.18.0",
+        "@types/glob": "^8.1.0",
         "@types/node": "^22.5.4",
         "@types/react-big-calendar": "^1.8.11",
         "@typescript-eslint/eslint-plugin": "^8.5.0",
@@ -57,11 +61,13 @@
         "express": "^4.21.0",
         "express-formidable": "^1.2.0",
         "express-session": "^1.18.0",
+        "glob": "^11.0.0",
         "moment": "^2.30.1",
         "mongoose": "^8.6.2",
         "pre-commit": "^1.2.2",
         "react-big-calendar": "^1.14.0",
         "rimraf": "^6.0.1",
+        "rollup-plugin-import-css": "^3.5.6",
         "tslib": "^2.7.0"
     }
 }
