--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
     "compilerOptions": {
-        "jsx": "react",
         "target": "esnext",
         "module": "nodenext",
         "moduleResolution": "nodenext",
         "strict": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
+        "outDir": "./dist",
         "allowSyntheticDefaultImports": true,
         "strict": true,
         "rootDir": "api",
-        "outDir": "./dist",
         "baseUrl": ".",
         "paths": {
-            "@/*": ["./api/*"]
+            "*": ["*", "api/*"]
         }
     },
     "include": ["api/**/*"],
